issue450/test_compress_neg_axis_1.mlir.log
within split at ./issue450/test_compress_neg_axis_1.mlir.decomposed.mlir:1 offset :5:10: error: failed to legalize operation 'torch.aten.nonzero'
    %1 = torch.aten.nonzero %0 : !torch.vtensor<[3],si64> -> !torch.vtensor<[2],si64>
         ^
within split at ./issue450/test_compress_neg_axis_1.mlir.decomposed.mlir:1 offset :5:10: note: see current operation: %4 = "torch.aten.nonzero"(%2) : (!torch.vtensor<[3],si64>) -> !torch.vtensor<[2],si64>
